# Bharatiya-Antariksh-Hackathon-2026

./: .gitignore  README.md  pyproject.toml
docs/design/: graph-engine-plan.md  graph-engine.md  route-resilience-design.md
docs/superpowers/plans/: 2026-06-30-route-resilience-graph-engine.md
examples/: demo.py
routeresilience/graph/: collapse.py  criticality.py  metrics.py  scenarios.py
tests/graph/: test_collapse.py  test_criticality.py  test_edge_cases.py  test_engine_integration.py  test_metrics.py  test_scenarios.py
